--- a/golang/.env
+++ b/golang/.env
@@ -1,5 +1,6 @@
 DATABASE_DRIVER_NAME=postgres
 DATABASE_HOST=localhost
+DATABASE_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DATABASE_NAME=test
