--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vuetify": "^2.6.0"
+    "vue-google-oauth2": "^1.5.8",
+    "vuetify": "^2.6.0",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
