--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,5 @@ jobs:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
           docker_compose_file: './golang/docker-compose.yml' # set the path to the folder where the docker-compose file is located
+          heroku_apps: '[]' # List of Docker Image name, Heroku app and Heroku app type
+          
