--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: CI
-on: {push}
+name: Deploy
+
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build, Push and Deploy to Heroku #set the whatever name you want to this step
-        id: heroku
-        uses: snithyanantham/docker-compose-multiple-apps-heroku-deploy@v1.0  # use the latest version of the action
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
-          api_key: ${{ secrets.HEROKU_API_KEY }} # your  heroku api key
-          docker_compose_file: './golang/docker-compose.yml' # set the path to the folder where the docker-compose file is located
-          heroku_apps: '[{"imagename":"app1","appname":"app1","apptype":"web"}]' # List of Docker Image name, Heroku app and Heroku app type
-          
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "sale-basic" #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
