--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,12 @@ jobs:
           heroku_app_name: "sale-basic" #Must be unique in Heroku
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
+          justlogin: true
+      - name: "Login to heroku registry"
+        run: heroku container:login
+
+      - name: "Build and push to heroku registry"
+        run: heroku container:push web --app email-service-web
+
+      - name: "Releases the container"
+        run: heroku container:release web --app email-service-web
