--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,16 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
+          branch: main
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "sale-basic" #Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          usedocker: true
-          justlogin: true
-      - name: "Login to heroku registry"
-        run: heroku container:login
-
-      - name: "Build and push to heroku registry"
-        run: heroku container:push web --app ${{secrets.HEROKU_EMAIL}}
-
-      - name: "Releases the container"
-        run: heroku container:release web --app ${{secrets.HEROKU_EMAIL}}
+          heroku_email: "danh2331997@gmail.com"
