--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
         with:
           branch: main
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "sale-basic" #Must be unique in Heroku
+          heroku_app_name: "sale-basic" #Must be unique 
           heroku_email: "danh2331997@gmail.com"
