--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,16 @@ jobs:
           heroku_app_name: "sale-basic" #Must be unique 
           heroku_email: "danh2331997@gmail.com"
           appdir: "golang"
+      - name: Set up go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19.2
+      - run: docker compose pull
+
+      - name: Run DB
+        run: |
+          docker compose up -d
+
+      - name: Run BE
+        run: |
+          go main.go
