--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           go-version: 1.19.2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-      
-      - run: git push heroku HEAD:refs/heads/main --force
+
+      - run: |
+          heroku git:remote -a sale-basic
       - run: docker compose pull
 
       - name: Run DB
