--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.19.2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+
+      # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       
       - run: git push heroku master --force
       - run: docker compose pull
