--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       
-      - run: git push heroku master --force
+      - run: heroku git:remote -a sale-basic
       - run: docker compose pull
 
       - name: Run DB
