--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       
       - run: heroku git:remote -a sale-basic
-      - run: docker compose pull
+      # - run: docker compose pull
 
       - name: Run DB
         run: |
