--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
       
       - run: heroku git:remote -a sale-basic
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - run: |
+          git push heroku main --force
       # - run: docker compose pull
 
       - name: Run DB
