--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - run: heroku git:remote -a sale-basic
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       - run: |
-          git push heroku main --force
+          git push heroku master --force
       # - run: docker compose pull
 
       - name: Run DB
