--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
 
       
       - run: heroku git:remote -a sale-basic
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       - run: |
-          git push heroku master --force
+          heroku git:push master --force
       # - run: docker compose pull
 
       - name: Run DB
